# find-first-id

./: .gitignore  README.md  clean.sh
benchmark/: CMakeLists.txt  bmark.sh  build.sh  loop.sh
benchmark/src/: benchmark.cpp
src/: CMakeLists.txt  CMakeVersion.txt  build.sh  cxx.sh
src/include/: kbset.h  kbtree.h  kset.h  kset_dec.h  kset_inc.h  kvector.h
src/src/: bitops.cpp  main.cpp
test/: CMakeLists.txt  build.sh
test/include/: kcommon_tests.h  kgeneric.h  krandom.h
test/src/: test_kbset.cpp  test_kbtree.cpp  test_kset.cpp  test_kset_dec.cpp  test_kset_inc.cpp  test_kvector.cpp
